# starSense

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
cpp/core/: actuator.cpp  actuator.hpp  controller.cpp  controller.hpp  dynamics.cpp  dynamics.hpp  integrator.cpp  integrator.hpp  referenceProfile.hpp  sensor.cpp  sensor.hpp  simulation.cpp  simulation.hpp  types.hpp  util.cpp  util.hpp
cpp/interface/: api.cpp  api.hpp  bindings.cpp
python/: attitude_plotting.py  lqr_utils.py  run.py  run_lqr_controls.py  run_pd_controls.py  test_attitude.py
